# quotes_library

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: pypi.yaml
quotes_library/: __init__.py  db.sqlite3  main.py  utils.py
quotes_library/tests/: test_connection.py
