[project]
name='quotes_library'
version='0.1'
authors=[{ name="'Anthony Emmanuel'", email="hackacehuawei@gmail.com" }]
description='This python library generates quotes'
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/mymi14s/quotes_library"
Issues = "https://github.com/mymi14s/quotes_library/issues"